longer using rt.cpan.org for bug tracking.  They are now being
tracked via Google Code at
http://code.google.com/p/www-mechanize/issues/list

Mech now has its own mailing list at Google Groups:
http://groups.google.com/group/www-mechanize-users


NEXT
========================================
[FIXED]
Fixed prerequisites on HTTP::Server::Simple on Windows.

[DOCUMENTATION]
Improvements to the docs explaining explicitly about the subclassed
methods we inherit from LWP::UserAgent.  Thanks, Lyle Hopkins!


1.64        Thu Jul  1 10:41:00 CDT 2010
========================================
[THINGS THAT MAY BREAK YOUR CODE]
If you've been accessing $mech->{forms} or $mech->{form} values
directly, instead of going through the $mech->forms or $mech->current_form
accessors, respectively, then this version of Mech will break your
code.

[ENHANCEMENTS]
Parsing of forms has been delayed until they're actually needed.
If don't use forms on a page, you'll no longer waste time and memory
parsing them.

$mech->title now caches the title of the page after parsing the
page to find it.

mech-dump now takes a --cookie-file parameter for keeping cookies
between calls.  Thanks, Damien Clark.


[DOCUMENTATION]
Typo fixes.


1.62        Sat Apr 10 23:10:07 CDT 2010
========================================
[FIXED]
Fixed a declaration in the Movable Type example in
WWW::Mechanize::Examples.

Quiet warnings if %ENV has undef values.

$mech->follow_link() no longer dies with an inappropriate error if
the link is not found.

$mech->click_button() now checks to see if a form is selected.

[INCOMPATIBILITIES]
$mech->form_name() and $mech->form_number() no longer throw warnings
if they can't find the form specified.  They still return undef,
though.

[DOCUMENTATION]
More additions to the FAQ.


1.60        Mon Aug 17 00:41:39 CDT 2009
========================================
No new features.  Exists only to skip tests that always fail on
Windows.

Fixed up some minor documentation problems.

