@@ -4,31 +4,32 @@ use warnings;
 use strict;
 use Test::More;
 
-use constant NONEXISTENT => 'http://blahblablah.xx-nonexistent.';
-
-BEGIN {
-    if (gethostbyname('blahblahblah.xx-nonexistent.')) {
-        plan skip_all => 'Found an A record for the non-existent domain';
-    }
-}
-
-BEGIN {
-    eval 'use Test::Exception';
-    plan skip_all => 'Test::Exception required to test autocheck' if $@;
-    plan tests => 5;
-}
 
 BEGIN { delete @ENV{ qw( http_proxy HTTP_PROXY ) }; }
 BEGIN {
-    use_ok( 'WWW::Mechanize' );
+    eval 'use Test::Exception';
+    plan skip_all => 'Test::Exception required to test autocheck' if $@;
 }
+
+
+my $NONEXISTENT = 'blahblablah.xx-nonexistent.foo';
+my @results = gethostbyname( $NONEXISTENT );
+if ( @results ) {
+    my ($name,$aliases,$addrtype,$length,@addrs) = @results;
+    my $ip = join( '.', unpack('W4',$addrs[0]) );
+    plan skip_all => "Your ISP is overly helpful and returns $ip for non-existent domain $NONEXISTENT. This test cannot be run.";
+}
+my $bad_url = "http://$NONEXISTENT/";
+
+plan tests => 5;
+require_ok( 'WWW::Mechanize' );
 
 AUTOCHECK_OFF: {
     my $mech = WWW::Mechanize->new( autocheck => 0 );
     isa_ok( $mech, 'WWW::Mechanize' );
 
-    $mech->get( NONEXISTENT );
-    ok( !$mech->success, q{Didn't fetch, but didn't die, either} );
+    $mech->get( $bad_url );
+    ok( !$mech->success, qq{Didn't fetch $bad_url, but didn't die, either} );
 }
 
 AUTOCHECK_ON: {
@@ -36,6 +37,6 @@ AUTOCHECK_ON: {
     isa_ok( $mech, 'WWW::Mechanize' );
 
     dies_ok {
-        $mech->get( NONEXISTENT );
-    } 'Mech would die 4 u';
+        $mech->get( $bad_url );
+    } qq{Couldn't fetch $bad_url, and died as a result};
 }
